add POST requests for reviews and users
