# controllers/users-controller.js
@@ -12,6 +12,21 @@ const getUsers = async (req, res, next) => {
     }
 };
 
+/** POST requests */
+const postUser = async (req, res) => {
+    // #swagger.description = 'Post one review to the database'
+    const user = new User({
+        username: req.body.username,
+        password: req.body.password,
+        reviews: req.body.reviews,
+        email: req.body.email,
+        first_name: req.body.first_name,
+        last_name: req.body.last_name
+    });
+    await user.save();
+    res.send(user);
+};
+
 //PUT request
 const putUser = async (req, res, next) => {
     // #swagger.description = 'Update one user based on ID'
@@ -27,6 +42,16 @@ const putUser = async (req, res, next) => {
     };
 };
 
+const putReviews = async (req, res, next) => {
+    // #swagger.description = 'Update user reviews with a new post'
+    try {
+        const user = await User.findOne({ _id: req.params.id });
+        user.reviews = user.reviews++;
+    } catch(error) {
+        next(error);
+    }
+}
+
 //DELETE request
 const deleteUser = async (req, res, next) => {
     // #swagger.description = 'Delete one user based on ID'
@@ -41,6 +66,8 @@ const deleteUser = async (req, res, next) => {
 
 module.exports = {
     getUsers,
+    postUser,
+    putReviews,
     putUser,
     deleteUser
 };
